# big-book-small-rusty-programs

./: .gitignore  .pre-commit-config.yaml  README.md
01-bagles/: Cargo.toml
01-bagles/src/: main.rs
02-birthdayparadox/: Cargo.toml
02-birthdayparadox/src/: main.rs
03-bitmapmessage/: Cargo.toml
03-bitmapmessage/src/: main.rs
